--- a/src/component/LayOut.module.css
+++ b/src/component/LayOut.module.css
@@ -1,5 +1,5 @@
 .container{
-    background-image: url(../assets/image/bg_1.png);
+    background-image: url(/assets/image/bg_1.png);
     min-width: 1400px;
     /* background: rgba(76, 161, 247, 0.4); */
     /* background: linear-gradient(to bottom,rgba(34,170,244,0.5),rgba(34,170,244,0.1)); */
